--- a/aws/s3.md
+++ b/aws/s3.md
@@ -19,8 +19,7 @@ Today I learnt ...
 - install `aws-cli` 
 	- https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-welcome.html
  - have access credentials at the default profile
-	 - A publicly available S3 bucket
-		 - [[til/cloudformation#.. how to create a stack programatically and clean up|cloudformation]]
+	 - [A publicly available S3 bucket](cloudformation.md#how-to-create-a-stack-programatically-and-clean-up)
 
 #### Recipe
 
